fix overlap background

--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
 }
 
 main {
-  z-index: 100;
+  position: relative;
+  z-index: 5;
 }
 
 body {
   background: #191919;
+  position: relative;
 }
 
 #jumbotron {
@@ -23,11 +25,11 @@ body {
 
 #particles-js {
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  opacity: 0.7;
-  z-index: 0;
+  opacity: 0.65;
+  z-index: -1;
 }
 
 /* POPPINS FONT */
